tests/lean/fail/run_command.lean
run_command tactic.fail "Error"
